Issue #601: Change the links' color in dark mode (#607)
* Added a light blue colour to links in dark mode.

* Changed color of links in dark mode

* Revert "Added a light blue colour to links in dark mode."

This reverts commit 92896dd78a4d4ff5306865e166dffc325893471c.

* Switched to secondary colour

--- a/resources/sass/materialize.scss
+++ b/resources/sass/materialize.scss
@@ -150,12 +150,24 @@ body {
             }
         }
         a {
-            color: #fff !important;
+            color: $primary-color;
         }
         .black-text {
             color: #fff !important;
         }
     }
+}
+
+body.dark a {
+  color: $secondary-color;
+}
+
+body.dark .nav-wrapper a {
+  color: #fff; /*this for the username in the navbar*/
+}
+
+body.dark a.btn {
+  color: #fff; /*this for buttons*/
 }
 
 //other, custom classes
